Refine UI/UX and refactor to a reusable ZMachine component

--- a/ZBlazor/Pages/Index.razor
+++ b/ZBlazor/Pages/Index.razor
@@ -1,7 +1,19 @@
 ﻿@page "/"
 
-<h1>Hello, world!</h1>
+    <h1>Blazor ZMachine Player</h1>
 
-Welcome to your new app.
+<p>
+    This simple site uses a C# ZMachine byte code interpreter running under WebAssembly in your browser.
+</p>
+<p>
+The games listed work by retrieving the ZMachine program files from the <a href="https://github.com/historicalsource">Historical Source github archive</a>.
+</p>
 
-<SurveyPrompt Title="How is Blazor working for you?" />
+<h1>Limitations/TODOS</h1>
+
+<ul>
+    <li>save/restore not supported (may crash the machine if attempted)</li>
+    <li>no command history</li>
+</ul>
+
+
