--- a/ZBlazor/Shared/NavMenu.razor
+++ b/ZBlazor/Shared/NavMenu.razor
@@ -1,5 +1,5 @@
 ﻿<div class="top-row pl-4 navbar navbar-dark">
-    <a class="navbar-brand" href="">ZBlazor</a>
+    <a class="navbar-brand" href="">Blazor ZMachine Player</a>
     <button class="navbar-toggler" @onclick="ToggleNavMenu">
         <span class="navbar-toggler-icon"></span>
     </button>
@@ -15,6 +15,16 @@
         <li class="nav-item px-3">
             <NavLink class="nav-link" href="zork1">
                 <span class="oi oi-plus" aria-hidden="true"></span> Zork I
+            </NavLink>
+        </li>
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="zork2">
+                <span class="oi oi-plus" aria-hidden="true"></span> Zork II
+            </NavLink>
+        </li>
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="zork3">
+                <span class="oi oi-plus" aria-hidden="true"></span> Zork III
             </NavLink>
         </li>
     </ul>
