--- a/ZBlazor/wwwroot/css/zmachine.css
+++ b/ZBlazor/wwwroot/css/zmachine.css
@@ -1,61 +1,100 @@
 ﻿.zm-container {
     background-color: black;
+    height: 30em;
+    display: flex;
+    flex-direction: column;
 }
+
 .zm-status {
-    height: 2em;
     border: 2px;
     color: lightblue;
     text-align: center;
     display: table;
 }
-.zm-status * {
-    display: table-cell;
-}
+
+    .zm-status * {
+        display: table-cell;
+    }
+
     .zm-status #name {
         width: 20%;
         text-align: left
     }
+
     .zm-status #room {
         width: 50%;
         text-align: center;
     }
+
     .zm-status #score {
         width: 100%;
-        text-align: right;
+        text-align: center;
     }
-.zm-output {
 
-    white-space: pre-wrap;
+.zm-output-container {
+    height: 80%;
     color: white;
-    height: 400px;
-    overflow-y: auto;
-    line-height: 1.2;
-    /* vertical-align: bottom; */
+    overflow-y: hidden;
+    height: available;
+    flex: 1;
+    background-color: black;
+    line-height: 1.25;
+    font-family: sans-serif;
+    font-size: medium;
 }
+
+    .zm-output-container .zm-output {
+        white-space: pre-wrap;
+        width: 100%;
+        height: 100%;
+        flex: 1;
+        background-color: black;
+        color: white;
+        resize: none;
+        overflow-y: scroll;
+    }
+        .zm-output-container .zm-output:focus {
+            outline: none;
+        }
+
+        .zm-output-container .zm-output::-webkit-scrollbar {
+            width: 10px;
+        }
+
+        .zm-output-container .zm-output::-webkit-scrollbar-thumb {
+            border-radius: 10px;
+            background: lightblue;
+        }
 
 .zm-input {
-    border: 2px;
+    border: 0px;
     border-color: yellow;
-
+    background-color: black;
     display: table;
+    height: 1em;
 }
+
     .zm-input label {
         display: table-cell;
         color: yellow;
     }
+
     .zm-input span {
         display: table-cell;
         width: 100%
     }
 
+    .zm-input INPUT {
+        border: 0px;
+        width: 100%;
+        color: yellow;
+        caret-color: yellow;
+        background-color: black;
+        display: inline;
+        overflow-x: hidden;
+        outline: none;
+    }
+
 #zm-output-anchor {
     height: 1px;
-}
-
-.zm-user-input {
-    width: 100%;
-    border: 2px;
-    background-color: black;
-    color: yellow;
-    display: inline;
 }
