--- a/ZBlazor/Pages/Index.razor
+++ b/ZBlazor/Pages/Index.razor
@@ -1,19 +1,21 @@
 ﻿@page "/"
 
-    <h1>Blazor ZMachine Player</h1>
+<h1>Blazor ZMachine Player</h1>
 
 <p>
     This simple site uses a C# ZMachine byte code interpreter running under WebAssembly in your browser.
 </p>
 <p>
-The games listed work by retrieving the ZMachine program files from the <a href="https://github.com/historicalsource">Historical Source github archive</a>.
+    The programs listed on the left are not hosted by this site. There are retrieved on page load from the <a href="https://github.com/historicalsource">Historical Source github archive</a> and as such they may or may not work as they do not represent actual released programs but rather the last version of files from a hard-drive just before the company shutdown 20+ years ago.
 </p>
+See the archive readme file (i.e. the <a href="https://github.com/historicalsource/zork1">Zork I</a> entry) for more details.
 
-<h1>Limitations/TODOS</h1>
+<h1>Limitations/Known issues</h1>
 
 <ul>
     <li>save/restore not supported (may crash the machine if attempted)</li>
     <li>no command history</li>
+    <li>enchanter doesn't even start</li>
 </ul>
 
 
