--- a/ZBlazor/Shared/NavMenu.razor
+++ b/ZBlazor/Shared/NavMenu.razor
@@ -27,6 +27,21 @@
                 <span class="oi oi-plus" aria-hidden="true"></span> Zork III
             </NavLink>
         </li>
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="enchanter1">
+                <span class="oi oi-plus" aria-hidden="true"></span> Enchanter
+            </NavLink>
+        </li>
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="enchanter2">
+                <span class="oi oi-plus" aria-hidden="true"></span> Sorcerer
+            </NavLink>
+        </li>
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="enchanter3">
+                <span class="oi oi-plus" aria-hidden="true"></span> Spellbreaker
+            </NavLink>
+        </li>
     </ul>
 </div>
 
