Add some home page text

--- a/ZBlazor/Shared/MainLayout.razor
+++ b/ZBlazor/Shared/MainLayout.razor
@@ -6,7 +6,9 @@
 
 <div class="main">
     <div class="top-row px-4">
-        <a href="http://blazor.net" target="_blank" class="ml-md-auto">About</a>
+        <a href="https://en.wikipedia.org/wiki/Z-machine" target="_blank" class="ml-md-auto">About ZMachine</a>
+        <a href="http://inform-fiction.org/zmachine/standards/z1point1/index.html" target="_blank" class="ml-md-auto">ZMachine Spec.</a>
+        <a href="http://blazor.net" target="_blank" class="ml-md-auto">About Blazor</a>
     </div>
 
     <div class="content px-4">
