--- a/ZBlazor/Pages/Index.razor
+++ b/ZBlazor/Pages/Index.razor
@@ -3,10 +3,10 @@
 <h1>Blazor ZMachine Player</h1>
 
 <p>
-    This simple site uses a C# ZMachine byte code interpreter running under WebAssembly in your browser.
+    This site was written using .NET Core 3.0 and the preview9 release of Blazor WASM (WebAssembly) and uses a C#, ZMachine byte code interpreter running under WebAssembly in your browser to execute ZMachine programs such as some of old <a href="https://en.wikipedia.org/wiki/Interactive_fiction" target="_blank">interactive fiction</a> games, more commonly known as 'text adventure' games.
 </p>
 <p>
-    The programs listed on the left are not hosted by this site. There are retrieved on page load from the <a href="https://github.com/historicalsource">Historical Source github archive</a> and as such they may or may not work as they do not represent actual released programs but rather the last version of files from a hard-drive just before the company shutdown 20+ years ago.
+    The programs listed on the left are not hosted by this site. There are retrieved on individual page load from the <a href="https://github.com/historicalsource">Historical Source github archive</a> and as such they may or may not work as they do not represent actual released programs but rather the last version of files from a hard-drive just before the company shutdown 20+ years ago.
 </p>
 See the archive readme file (i.e. the <a href="https://github.com/historicalsource/zork1">Zork I</a> entry) for more details.
 
