Refactor object attribute handling out of ZMachineObject to seperate ZAttributes class

--- a/ZBlazor/Pages/Index.razor
+++ b/ZBlazor/Pages/Index.razor
@@ -13,7 +13,7 @@ See the Historical Source readme files (i.e. the <a href="https://github.com/his
 <h1>Limitations/Known issues</h1>
 
 <ul>
-    <li>`save/restore` not supported (may crash the machine if attempted)</li>
+    <li>`save/restore` not supported (may crash the z-machine if attempted)</li>
     <li>`restart` command doesn't work. Refresh the page to restart</li>
     <li>no command history</li>
 </ul>
